<resources>
    <string name="app_name">emeowtions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emeowtions">Emeowtions</string>
    <string name="emeowtions_logo">Emeowtions Logo</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="email">Email</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create your account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="my_cats">My Cats</string>
    <string name="clinics">Clinics</string>
    <string name="emotions">Emotions</string>
    <string name="chat">Chat</string>
    <string name="discover">Discover</string>
    <string name="features">Features</string>
    <string name="top_clinics">Top Clinics</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_profile_item">Navigation drawer profile item</string>
    <string name="log_out">Log out</string>
    <string name="analysis_history">Analysis History</string>
    <string name="navigation_drawer_analysis_history_item">Navigation drawer analysis history item</string>
    <string name="feedback">Feedback</string>
    <string name="navigation_drawer_feedback_item">Navigation drawer feedback item</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="rate_your_experience_description">We would like to hear from you. How was your experience with Emeowtions?</string>
    <string name="describe_your_experience">Describe your experience</string>
    <string name="submit">Submit</string>
    <string name="emotions_icon_under_features_section">Emotions icon under Features section</string>
    <string name="chat_icon_under_features_section">Chat icon under Features section</string>
    <string name="my_cats_icon_under_features_section">My Cats icon under Features section</string>
    <string name="clinics_icon_under_features_section">Clinics icon under Features section</string>
    <string name="enter_cat_name_to_search">Enter cat name to search</string>
    <string name="my_cats_search_bar">My Cats search bar</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="add_cat">Add Cat</string>
    <string name="gender">Gender</string>
    <string name="breed">Breed</string>
    <string name="background">Background</string>
    <string name="medical_conditions">Medical Conditions</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cat_profile_picture_upload_field">Cat profile picture upload field</string>
    <string name="description_of_cat">Description of cat</string>
    <string name="name">Name</string>
    <string name="no_description">No description</string>
    <string name="unspecified">Unspecified</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="display_name">Display Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_cancel_message">Are you sure you want to discard your changes?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="not_set">Not set</string>
    <string name="email_not_verified">Email Not Verified</string>
    <string name="email_not_verified_message">You have limited access to features until you verify your email address (%s). Please check your inbox for the verification link.</string>
    <string name="new_email_not_verified_message">You have limited access to features until you verify your <b>new</b> email address (%s). Please check your inbox for the verification link.\n\nYou will need to re-log into your account after verification.</string>
    <string name="ok">OK</string>
    <string name="enter_password">Enter password</string>
    <string name="dialog_password_message">Provide your password to update email address</string>
    <string name="password_required_error">Password is required</string>
    <string name="confirm_password_required_error">Confirm Password is required</string>
    <string name="cancel_dialog_generic_message">Are you sure you want to cancel?</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="cancel_cat_creation">Cancel Cat Creation</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="cat_profile">Cat Profile</string>
    <string name="edit_cat_profile">Edit Cat Profile</string>
    <string name="cat_profile_picture">Cat profile picture</string>
    <string name="cat_placeholder_name">Nekomata Okayu</string>
    <string name="description">Description</string>
    <string name="delete_cat">Delete Cat</string>
    <string name="delete_cat_message">Are you sure you want to delete %s?</string>
    <string name="results_not_found">Results not found</string>
    <string name="reset">Reset</string>
    <string name="no_cats_found_message">No cats found. Try another name!</string>
    <string name="clear_search">Clear Search</string>
    <string name="no_cats">No Cats</string>
    <string name="no_cats_message">You have no cats yet.</string>
    <string name="settings">Settings</string>
    <string name="mode">Mode</string>
    <string name="cat">Cat</string>
    <string name="generate_analysis">Generate Analysis</string>
    <string name="upload">Upload</string>
    <string name="clear">Clear</string>
    <string name="emotion_analysis">Emotion Analysis</string>
    <string name="no_cat_detected">No cat detected</string>
    <string name="body_language">Body Language</string>
    <string name="recommendations">Recommendations</string>
    <string name="summary">Summary</string>
    <string name="emotion">Emotion</string>
    <string name="back">Back</string>
    <string name="no_recommendations">No recommendations</string>
    <string name="no_recommendations_message">No appropriate recommendations generated</string>
    <string name="no_results">No Results</string>
    <string name="no_body_language_detected">No body language detected</string>
    <string name="save_analysis">Save Analysis</string>
    <string name="rate_analysis">Rate Analysis</string>
    <string name="none">None</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="navigation_drawer_switch_to_user_view_item">Navigation drawer switch to User view item</string>
    <string name="switch_to_user_view">Switch to User View</string>
    <string name="switch_user_view_message">Are you sure you want to switch to User view?</string>
    <string name="switch_to_admin_view">Switch to Admin View</string>
    <string name="switch_to_vet_view">Switch to Vet View</string>
    <string name="switch_admin_view_message">Are you sure you want to switch to Admin view?</string>
    <string name="are_you_sure_you_want_to_switch_to_vet_view">Are you sure you want to switch to Vet view?</string>
    <string name="clinic_profile">Clinic Profile</string>
    <string name="staff">Staff</string>
    <string name="see_registration_status">See Status</string>
    <string name="register_clinic_success_message">Your veterinary clinic has been successfully registered. Our admins will process your registration and notify you whether your clinic has been approved or rejected.</string>
    <string name="success">Success</string>
    <string name="success_icon">Success icon</string>
    <string name="clinic_registrations">Registrations</string>
    <string name="edit">Edit</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="navigation_drawer_general_feedback_item">Navigation drawer general feedback item</string>
    <string name="general_feedback">General Feedback</string>
    <string name="navigation_drawer_analysis_feedback_item">Navigation drawer analysis feedback item</string>
    <string name="analysis_feedback">Analysis Feedback</string>
    <string name="navigation_drawer_recommendation_ratings_item">Navigation drawer recommendation ratings item</string>
    <string name="recommendation_ratings">Recommendation Ratings</string>
    <string name="age">Age</string>
    <string name="clinic_inbox">Clinic Inbox</string>
    <string name="navigation_drawer_clinic_inbox_item">Navigation drawer clinic inbox item</string>
    <string name="clinic_reviews">Clinic Reviews</string>
    <string name="navigation_drawer_clinic_reviews_item">Navigation drawer clinic reviews item</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="factors">Factors</string>
    <string name="age_description">Age affects a cat\'s physical needs, energy levels, and mental health.</string>
    <string name="gender_description">Gender can influence behaviour, especially if the cat us not neutered (male) or spayed (female).</string>
    <string name="breed_description">Different breeds have unique characteristics affecting their behaviour, particularly their temperament and activity level.</string>
    <string name="background_description">The environment a cat originates from can shape its behaviour, social skills, and trust level with humans.</string>
    <string name="medical_conditions_description">Medical conditions impact a cat\'s physical comfort, mood, and behaviour.</string>
    <string name="age_types">
        \n <li><b>Kitten</b> (less than 1 yo): High energy and curiosity, requiring play and stimulation to develop coordination and social skills.</li>
        \n\n <li><b>Adult</b> (between 1 to 11 yo): Generally balanced and predictable behaviour; requires moderate activity and mental stimulation.</li>
        \n\n <li><b>Senior</b> (11 yo or older): Reduced energy and activity levels, may require special care for health and comfort.</li>
    </string>
    <string name="gender_types">
        \n <li><b>Male</b>: Often more territorial and independent; may roam or mark territory if not neutered.</li>
        \n\n <li><b>Female</b>: Generally more cautious or affectionate, especially if spayed; unspayed females may go into heat and display restlessness.</li>
    </string>
    <string name="breed_types">
        \n <li><b>Temperament</b>: Different breeds of cats can generally be <i>affectionate</i>, <i>gentle</i>, or <i>playful</i>.</li>
        \n\n <li><b>Activity Level</b>: Different breeds of cats may have <i>low</i>, <i>moderate</i>, <i>high</i>, or <i>varying</i> activity levels.</li>
    </string>
    <string name="background_types">
        \n <li><b>Domestic</b>: Raised with consistent human interaction; typically social and trusting.</li>
        \n\n <li><b>Stray</b>: Has been exposed to humans but may be wary; needs gradual socialization.</li>
        \n\n <li><b>Feral</b>: Born or raised without human interaction; often fearful or defensive around people.</li>
    </string>
    <string name="medical_conditions_types">
        \n <li><b>Yes</b>: Requires special care based on health conditions that may affect mood and energy.</li>
        \n\n <li><b>No</b>: No known medical conditions.</li>
    </string>
</resources>