<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/admin_profile_item"
        android:checkable="true"
        android:contentDescription="@string/navigation_drawer_profile_item"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/admin_general_feedback_item"
        android:enabled="true"
        android:contentDescription="@string/navigation_drawer_general_feedback_item"
        android:icon="@drawable/baseline_feedback_24"
        android:title="@string/general_feedback"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/admin_analysis_feedback_item"
        android:enabled="true"
        android:contentDescription="@string/navigation_drawer_analysis_feedback_item"
        android:icon="@drawable/baseline_insights_24"
        android:title="@string/analysis_feedback"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/admin_recommendation_ratings_item"
        android:enabled="true"
        android:contentDescription="@string/navigation_drawer_recommendation_ratings_item"
        android:icon="@drawable/baseline_thumb_up_24"
        android:title="@string/recommendation_ratings"
        app:showAsAction="ifRoom" />
</menu>