<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_clinic_details"
        android:title="@string/edit"
        android:icon="@drawable/baseline_edit_24"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_reject_clinic"
        android:title="@string/reject"
        android:icon="@drawable/baseline_close_24"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_approve_clinic"
        android:title="@string/approve"
        android:icon="@drawable/outline_check_24"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
</menu>