<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.user.GuideRecommendationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Banner -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_300"
                android:orientation="vertical"
                android:padding="@dimen/padding_screen_edge">

                <TextView
                    style="@style/HeadingText1.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_2"
                    android:text="@string/factors"
                    android:textColor="@color/white"
                    android:textSize="30sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_small_2"
                        android:text="@string/one"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small_1"
                        android:text="@string/age"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_small_2"
                        android:text="@string/two"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small_1"
                        android:text="@string/gender"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_small_2"
                        android:text="@string/three"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small_1"
                        android:text="@string/breed"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_small_2"
                        android:text="@string/four"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small_1"
                        android:text="@string/background"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_small_2"
                        android:text="@string/five"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/BodyText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small_1"
                        android:text="@string/medical_conditions"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <!-- Age -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_screen_edge">

                <TextView
                    style="@style/HeadingText1.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_2"
                    android:text="@string/age" />
                
                <TextView
                    style="@style/BodyText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age_description"/>

                <TextView
                    style="@style/BodyText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age_types"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Gender -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_screen_edge">

                <TextView
                    style="@style/HeadingText1.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_2"
                    android:text="@string/gender" />

                <TextView
                    style="@style/BodyText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_description"/>

                <TextView
                    style="@style/BodyText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_types"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Breed -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_screen_edge">

                <TextView
                    style="@style/HeadingText1.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_2"
                    android:text="@string/breed" />

                <TextView
                    style="@style/BodyText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breed_description"/>

                <TextView
                    style="@style/BodyText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breed_types"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Background -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_screen_edge">

                <TextView
                    style="@style/HeadingText1.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_2"
                    android:text="@string/background" />

                <TextView
                    style="@style/BodyText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/background_description"/>

                <TextView
                    style="@style/BodyText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/background_types"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Medical Conditions -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_screen_edge">

                <TextView
                    style="@style/HeadingText1.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_2"
                    android:text="@string/medical_conditions" />

                <TextView
                    style="@style/BodyText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medical_conditions_description"/>

                <TextView
                    style="@style/BodyText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medical_conditions_types"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>